--- a/pages/categories/categories.css
+++ b/pages/categories/categories.css
@@ -34,7 +34,7 @@
 .button-submit {
   border: none;
   border-radius: 5px;
-  margin-top: 30px;
+  margin: 10px 0;
   display: flex;
   justify-content: center;
   align-items: center;
